# cert-manager

./: .gitignore  Makefile  README.md  cert_manager.py  pyproject.toml  services.list.json
infra/deployment/: Dockerfile  deployment.yaml  entrypoint.sh
infra/development/: Dockerfile.development  development.yaml  entrypoint-development.sh
scripts/deployment/: setup.sh
scripts/development/: development-build.sh
